--- a/index.html
+++ b/index.html
@@ -50,13 +50,32 @@
                     </a>
                     <ul class="navbar-item-menu">
                         <li>
-                            <a href="https://www.linkedin.com/in/mark-paul-cañeda-b5a1911a0" target="__blank" rel="noopener"><i class="bi-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/mark-paul-cañeda-b5a1911a0" target="__blank" rel="noopener">
+                                <div class="bg-overlay bg-light">
+                                    <i class="bi bi-linkedin"></i>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/markpaul.caneda.7" target="__blank" rel="noopener"><i class="bi-facebook"></i></a>
+                            <a href="https://www.facebook.com/markpaul.caneda.7" target="__blank" rel="noopener">
+                                <div class="bg-overlay bg-light">
+                                    <i class="bi bi-facebook"></i>
+                                </div>
+                            </a>
                         </li>
                         <li>
-                            <a href="https://github.com/GitMarkPaul" target="__blank" rel="noopener"><i class="bi-github"></i></a>
+                            <a href="https://github.com/GitMarkPaul" target="__blank" rel="noopener">
+                                <div class="bg-overlay bg-light">
+                                    <i class="bi bi-github"></i>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:markpaulcaneda19@gmail.com" rel="noopener">
+                                <div class="bg-overlay bg-light">
+                                    <i class="bi bi-envelope-fill"></i>
+                                </div>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -71,9 +90,9 @@
             <div class="container">
                 <div class="banner-flex-items">
                     <div class="home-banner-content">
-                        <h1>Hello, I'm <br>  Mark Paul Cañeda, <br> a Full Stack web developer</h1>
+                        <h1>Hello there! I'm <br>  Mark Paul Cañeda, <br> a Full Stack web developer</h1>
                         <p>A goal-oriented Full Stack Web Developer with strong commitment to collaboration and problem-solving. Uses various web design packages in developing custom-crafted websites and designs in providing the customers desired output. Committed to high standards of user experience, usability and speed.</p>
-                        <a href="https://drive.google.com/file/d/1pxVNxXov0fYjCHWDCLTR5yxulrEEENRo/view?usp=sharing" target="__blank" rel="noopener"  class="btn btn-danger">Download Resume</a>
+                        <a href="mailto:markpaulcaneda19@gmail.com" class="btn btn-danger">Let's work together</a>
                     </div>
                     <img src="assets/media/banner.svg" class="home-banner-img" alt="" />
                 </div>
@@ -176,6 +195,22 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100">
+                                    <div class="card-body">
+                                        <i class="bi-back"></i>
+                                        <span>Convert Mockup to a Website</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100">
+                                    <div class="card-body">
+                                        <i class="bi-columns-gap"></i>
+                                        <span>Responsive Website Design</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -184,45 +219,161 @@
 
         <!-- Skill Sets -->
         <section class="section-skill-set">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section-header text-center">
-                        <h2>Contact Information</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad vitae voluptates, magnam reprehenderit nisi vel.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row align-items-center justify-content-between">
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                    <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
-                        <div class="col">
-                            <a href="mailto:markpaulcaneda19@gmail.com">
-                                <div class="card card-skill-set h-100">
-                                    <div class="card-body">
-                                        <i class="bi-envelope"></i>
-                                        <span>Email</span>
-                                        <small class="text-muted mt-1">markpaulcaneda19@gmail.com</small>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="tel:+6392759420158">
-                                <div class="card card-skill-set h-100">
-                                    <div class="card-body">
-                                        <i class="bi-telephone"></i>
-                                        <span>Phone</span>
-                                        <small class="text-muted mt-1">+639275942058</small>
-                                    </div>
-                                </div>
-                            </a>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="section-header text-center">
+                            <h2>Core Competencies</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis ad vitae voluptates, magnam reprehenderit nisi vel.</p>
                         </div>
                     </div>
                 </div>
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/laravel-logo.png" width="100" height="100" alt="">
+                                        <span class="fs-5">Laravel Framework</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/bootstrap-logo.png" width="120" alt="">
+                                        <span class="fs-5">Bootstrap</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/html-logo.png" width="100" alt="">
+                                        <span class="fs-5">HTML</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/css-logo.png" width="100" alt="">
+                                        <span class="fs-5">CSS</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/sass-logo.png" width="100" alt="">
+                                        <span class="fs-5">Sass</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/javascript-logo.png" width="100" alt="">
+                                        <span class="fs-5">JavaScript</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/node-logo.png" width="100" alt="">
+                                        <span class="fs-5">NodeJS</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/git-logo.png" width="100" alt="">
+                                        <span class="fs-5">Git</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/vue-logo.png" width="100" alt="">
+                                        <span class="fs-5">Vue</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/amazon-web-services-logo.png" width="100" alt="">
+                                        <span class="fs-5">Amazon Web Services</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/wordpress-logo.png" width="160" alt="">
+                                        <span class="fs-5">Wordpress Framework</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <!-- Skill Sets -->
+        <section class="section-skill-set" id="contactInfo">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="section-header text-center">
+                            <h2>Contact Information</h2>
+                            <p>Interested in working together? Send me an email or say hi on messenger if you would like to chat. I'd love to hear from you.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
+                            <div class="col">
+                                <a href="mailto:markpaulcaneda19@gmail.com">
+                                    <div class="card card-skill-set h-100">
+                                        <div class="card-body">
+                                            <i class="bi-envelope"></i>
+                                            <span>Send me an email</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a href="tel:+6392759420158">
+                                    <div class="card card-skill-set h-100">
+                                        <div class="card-body">
+                                            <i class="bi-telephone"></i>
+                                            <span>Phone</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <a href="tel:+6392759420158">
+                                    <div class="card card-skill-set h-100">
+                                        <div class="card-body">
+                                            <i class="bi-chat-dots"></i>
+                                            <span>Say hi on messenger</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="main-footer">
