--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/markpaul.caneda.7" target="__blank" rel="noopener">
+                            <a href="https://www.facebook.com/markpaul.caneda.1/" target="__blank" rel="noopener">
                                 <div class="bg-overlay bg-light">
                                     <i class="bi bi-facebook"></i>
                                 </div>
@@ -360,7 +360,7 @@
                                 </a>
                             </div>
                             <div class="col">
-                                <a href="tel:+6392759420158">
+                                <a href="https://www.facebook.com/markpaul.caneda.1/">
                                     <div class="card card-skill-set h-100">
                                         <div class="card-body">
                                             <i class="bi-chat-dots"></i>
