--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
     <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
     <meta name="theme-color" content="#1E003D"/>
-    <title>Mark Paul - Codexus</title>
+    <title>Full Stack Developer | Mark Paul</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
