--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
     <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
     <meta name="theme-color" content="#1E003D"/>
-    <title>Full Stack Developer | Mark Paul</title>
+    <title>Full Stack Developer | Mark Paul Cañeda</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -230,12 +230,12 @@
                 </div>
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
+                        <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
                                     <div class="card-body">
                                         <img src="assets/media/logos/laravel-logo.png" width="100" height="100" alt="">
-                                        <span class="fs-5">Laravel Framework</span>
+                                        <span class="fs-5">Laravel</span>
                                     </div>
                                 </div>
                             </div>
@@ -307,7 +307,7 @@
                                 <div class="card card-skill-set h-100 p-3">
                                     <div class="card-body">
                                         <img src="assets/media/logos/amazon-web-services-logo.png" width="100" alt="">
-                                        <span class="fs-5">Amazon Web Services</span>
+                                        <span class="fs-5">AWS</span>
                                     </div>
                                 </div>
                             </div>
@@ -315,7 +315,15 @@
                                 <div class="card card-skill-set h-100 p-3">
                                     <div class="card-body">
                                         <img src="assets/media/logos/wordpress-logo.png" width="160" alt="">
-                                        <span class="fs-5">Wordpress Framework</span>
+                                        <span class="fs-5">Wordpress</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card card-skill-set h-100 p-3">
+                                    <div class="card-body">
+                                        <img src="assets/media/logos/ionic-logo.png" width="100" alt="">
+                                        <span class="fs-5">Ionic</span>
                                     </div>
                                 </div>
                             </div>
@@ -354,7 +362,7 @@
                                     <div class="card card-skill-set h-100">
                                         <div class="card-body">
                                             <i class="bi-telephone"></i>
-                                            <span>Phone</span>
+                                            <span>Call me now!</span>
                                         </div>
                                     </div>
                                 </a>
@@ -395,6 +403,6 @@
         } else {
             console.log("Service worker is not supported");
         }
-      </script>
+    </script>
 </body>
 </html>
