--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:image:height" content="300">
     <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
     <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
-    <meta name="theme-color" content="#1E003D"/>
+    <meta name="theme-color" content="#ffffff"/>
     <title>Full Stack Developer | Mark Paul Cañeda</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
