--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                             <h2>About Myself</h2>
                             <p>For over 2 years i have been successfully providing business information to people.</p>
                             <p>Experienced Full-stack Web Developer with a demonstrated history of working in the information technology and services industry. Skilled in Back-end and Front-end Development. Strong engineering professional graduated from La Verdad Christian College, Apalit Pampanga.</p>
+                            <button type="button" class="btn btn-danger" id="share">Share</button>
                         </div>
                     </div>
                 </div>
