--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;" charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
     <meta name="keywords" content="Web Developer, Portfolio" />
-    <meta name="description" content="Hello, I'm Mark Paul Cañeda, a Full Stack web developer and a goal-oriented Full Stack Web Developer with strong commitment to collaboration and problem-solving." />
+    <meta name="description" content="Hi!, I'm Mark Paul Cañeda, a Full Stack web developer and a goal-oriented Full Stack Web Developer with strong commitment to collaboration and problem-solving." />
     <meta name="author" content="Mark Paul Acebo Cañeda" />
     <meta name="copyright" content="Mark Paul Acebo Cañeda Portfolio" />
     <meta name="robots" content="all" />
@@ -111,7 +111,7 @@
                             <h2>About Myself</h2>
                             <p>For over 2 years i have been successfully providing business information to people.</p>
                             <p>Experienced Full-stack Web Developer with a demonstrated history of working in the information technology and services industry. Skilled in Back-end and Front-end Development. Strong engineering professional graduated from La Verdad Christian College, Apalit Pampanga.</p>
-                            <button type="button" class="btn btn-danger" id="share">Share</button>
+                            <button type="button" class="btn btn-danger" id="share">Share me now</button>
                         </div>
                     </div>
                 </div>
