--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://gitmarkpaul.github.io/portfolio-dev/" />
     <meta property="og:site_name" content="Mark Paul Acebo Cañeda" />
     <meta name="theme-color" content="#ffffff"/>
-    <title>Full Stack Developer | Mark Paul Cañeda</title>
+    <title>Full Stack Web Developer | Mark Paul Cañeda</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -131,84 +131,92 @@
                 </div>
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                        <div class="row row-cols-2 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
+                        <div class="row row-cols-1 row-cols-lg-3 row-cols-md-3 g-3">
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-calendar2-week"></i>
-                                        <span>UI-UX Design</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-calendar2-week"></i>
+                                        </div>
+                                        <h4>UI-UX Design</h4>
+                                        <span>User Experience (UX) and User Interface (UI) are some of the most confused and misused terms in our field. A great product experience starts with UX followed by UI.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-laptop"></i>
-                                        <span>Web Design</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-laptop"></i>
+                                        </div>
+                                        <h4>Web Design</h4>
+                                        <span>The different areas of web design include web graphic design; user interface design; authoring, including standardised code and proprietary software.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-phone"></i>
-                                        <span>Mobile Design</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-phone"></i>
+                                        </div>
+                                        <h4>Mobile First Design</h4>
+                                        <span>Designing and prototyping your websites for mobile devices first helps you ensure that your users' experience is seamless on any device.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-puzzle"></i>
-                                        <span>Front-end Development</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-puzzle"></i>
+                                        </div>
+                                        <h4>Front-end Development</h4>
+                                        <span>The practice of converting data to a graphical interface, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that data.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-code-square"></i>
-                                        <span>Back-end Development</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-code-square"></i>
+                                        </div>
+                                        <h4>Back-end Development</h4>
+                                        <span>Back end development refers to the server side of an application and everything that communicates between the database and the browser.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-layers"></i>
-                                        <span>Dynamic & Static Websites</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-bar-chart-steps"></i>
+                                        </div>
+                                        <h4>Search Engine Optimization</h4>
+                                        <span>The process of improving the quality and quantity of website traffic to a website or a web page from search engines.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-bar-chart-steps"></i>
-                                        <span>Search Engine Optimization</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-app-indicator"></i>
+                                        </div>
+                                        <h4>Progressive Web Apps</h4>
+                                        <span>It is intended to work on any platform that uses a standards-compliant browser, including both desktop and mobile devices.</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100">
                                     <div class="card-body">
-                                        <i class="bi-app-indicator"></i>
-                                        <span>Progressive Web Apps</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card card-skill-set h-100">
-                                    <div class="card-body">
-                                        <i class="bi-back"></i>
-                                        <span>Convert Mockup to a Website</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card card-skill-set h-100">
-                                    <div class="card-body">
-                                        <i class="bi-columns-gap"></i>
-                                        <span>Responsive Website Design</span>
+                                        <div class="bg-overlay-lg bg-light">
+                                            <i class="bi-columns-gap"></i>
+                                        </div>
+                                        <h4>Responsive Website Design</h4>
+                                        <span>Responsive web design is an approach to web design that makes web pages render well on a variety of devices and window or screen sizes.</span>
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +242,7 @@
                         <div class="row row-cols-1 row-cols-xl-6 row-cols-lg-4 row-cols-md-3 justify-content-center g-3">
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/laravel-logo.png" width="100" height="100" alt="">
                                         <span class="fs-5">Laravel</span>
                                     </div>
@@ -242,7 +250,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/bootstrap-logo.png" width="120" alt="">
                                         <span class="fs-5">Bootstrap</span>
                                     </div>
@@ -250,7 +258,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/html-logo.png" width="100" alt="">
                                         <span class="fs-5">HTML</span>
                                     </div>
@@ -258,7 +266,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/css-logo.png" width="100" alt="">
                                         <span class="fs-5">CSS</span>
                                     </div>
@@ -266,7 +274,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/sass-logo.png" width="100" alt="">
                                         <span class="fs-5">Sass</span>
                                     </div>
@@ -274,7 +282,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/javascript-logo.png" width="100" alt="">
                                         <span class="fs-5">JavaScript</span>
                                     </div>
@@ -282,7 +290,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/node-logo.png" width="100" alt="">
                                         <span class="fs-5">NodeJS</span>
                                     </div>
@@ -290,7 +298,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/git-logo.png" width="100" alt="">
                                         <span class="fs-5">Git</span>
                                     </div>
@@ -298,7 +306,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/vue-logo.png" width="100" alt="">
                                         <span class="fs-5">Vue</span>
                                     </div>
@@ -306,7 +314,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/amazon-web-services-logo.png" width="100" alt="">
                                         <span class="fs-5">AWS</span>
                                     </div>
@@ -314,7 +322,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/wordpress-logo.png" width="160" alt="">
                                         <span class="fs-5">Wordpress</span>
                                     </div>
@@ -322,7 +330,7 @@
                             </div>
                             <div class="col">
                                 <div class="card card-skill-set h-100 p-3">
-                                    <div class="card-body">
+                                    <div class="card-body text-center justify-content-center">
                                         <img src="assets/media/logos/ionic-logo.png" width="100" alt="">
                                         <span class="fs-5">Ionic</span>
                                     </div>
@@ -352,8 +360,10 @@
                                 <a href="mailto:markpaulcaneda19@gmail.com">
                                     <div class="card card-skill-set h-100">
                                         <div class="card-body">
-                                            <i class="bi-envelope"></i>
-                                            <span>Send me an email</span>
+                                            <div class="d-grid justify-content-center text-center">
+                                                <i class="bi-envelope"></i>
+                                                <span>Send me an email</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </a>
@@ -362,8 +372,10 @@
                                 <a href="tel:+6392759420158">
                                     <div class="card card-skill-set h-100">
                                         <div class="card-body">
-                                            <i class="bi-telephone"></i>
-                                            <span>Call me now!</span>
+                                            <div class="d-grid justify-content-center text-center">
+                                                <i class="bi-telephone"></i>
+                                                <span>Call me now!</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </a>
@@ -372,8 +384,10 @@
                                 <a href="https://www.facebook.com/markpaul.caneda.1/">
                                     <div class="card card-skill-set h-100">
                                         <div class="card-body">
-                                            <i class="bi-chat-dots"></i>
-                                            <span>Say hi on messenger</span>
+                                            <div class="d-grid justify-content-center text-center">
+                                                <i class="bi-chat-dots"></i>
+                                                <span>Say hi on messenger</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </a>
