google tag manager

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="canonical" href="https://gitmarkpaul.github.io/portfolio-dev/" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-97RPTP3JP4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-97RPTP3JP4');
+    </script>
 </head>
 <body>
     <header class="main-header">
